--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
     <!-- <link type="text/css" href="/main.css" media="all" rel="stylesheet" /> -->
     <link type="text/css" href="./print.css" media="all" rel="stylesheet" />
     <link href="./favicon.ico" rel="shortcut icon" />
+    <style>
 
+        .anchor80-line {
+            position: absolute;
+            background-color: #9ee7ea;
+            box-sizing: border-box;
+            padding: 5px 0;
+            font-size: 24px;
+            line-height: 1;
+            text-align: center;
+        }
+    </style>
 
 </head>
 
@@ -18,6 +29,7 @@
         <button class="print-button" type="button" onclick="window.print();">Print</button>
         <button class="close-button" type="button">Close</button>
     </div>
+    
     <div id="print-container">
         <h2>A basic HTML table</h2>
         <h4 class="no-print">Don't print me!</h4>
@@ -39,9 +51,30 @@
                 <td>Mexico</td>
             </tr>
         </table>
+        <div style="width: 400px; height: 100px; position: relative;">
+            <div id="start" class="anchor80-line" style="left: 0; top: 0;">start</div>
+            <div id="end" class="anchor80-line" style="right: 0; bottom: 0;">end</div>
+        </div>
         <p>To understand the example better, we have added borders to the table.</p>
     </div>
 
+
+
+    <script>
+        fetch("./leader-line.1.0.7.min.js")
+        .then(res => res.text())
+        .then(scriptContent => {
+            eval(scriptContent);
+            new LeaderLine(
+                document.getElementById('start'),
+                document.getElementById('end')
+            );
+        })
+    </script>
+    <!-- <script type="module">
+        import { default as LeaderLine } from "./leader-line.1.0.7.esm.min.js";
+
+    </script> -->
 </body>
 
 </html>
